--- a/src/main/resources/templates/admin/userManage/userDetail.html
+++ b/src/main/resources/templates/admin/userManage/userDetail.html
@@ -11,9 +11,8 @@
     <div>
         <span>이름 : [[*{name}]]</span><br/>
         <span>출석수 : [[*{attendanceNumber}]]</span><br/>
-        <span>결석수 : [[*{absenceNumber}]]</span><br/>
         <span>생일 : [[*{birth}]]</span><br/>
-        <span>전화번호 : [[*{phone}]]</span><br/>
+        <span>비밀번호 : [[*{password}]]</span><br/>
         <span>팀 : [[*{team}]]</span><br/>
     </div>
     <button class="w-50 btn btn-warning btn-sm" onclick="location.href='/admin/manager'">뒤로가기</button>
