--- a/src/main/resources/templates/admin/adminHome.html
+++ b/src/main/resources/templates/admin/adminHome.html
@@ -17,8 +17,9 @@
     <br/><br/>
     <button class="w-100 btn btn-primary btn-lg" onclick="location.href='/admin/manager'">유저 관리하기</button>
     <br/><br/>
+    <button class="w-100 btn btn-primary btn-lg" onclick="location.href='/admin/post/list'">게시물 관리하기</button>
+    <br/><br/>
     <button class="w-100 btn btn-warning btn-lg" onclick="location.href='/admin/logout'">로그아웃</button>
-
 </div>
 </body>
 </html>
