--- a/src/main/resources/templates/admin/post/postDetail.html
+++ b/src/main/resources/templates/admin/post/postDetail.html
@@ -18,7 +18,8 @@
         <br/>
     </div>
     <button class="w-50 btn btn-primary btn-sm" th:onclick="|location.href='@{/admin/post/edit/{postId}(postId=*{postId})}'|">수정하기</button>
-    <button class="w-50 btn btn-warning btn-sm" onclick="location.href='/admin'">뒤로가기</button>
+    <br/><br/>
+    <button class="w-50 btn btn-warning btn-sm" onclick="location.href='/admin/post/list'">뒤로가기</button>
 
 </div> <!-- /container -->
 </body>
