--- a/src/main/resources/templates/admin/post/editPostForm.html
+++ b/src/main/resources/templates/admin/post/editPostForm.html
@@ -10,8 +10,8 @@
         <h2>게시물 수정하기</h2>
     </div>
 
-    <form th:action="@{admin/post/edit/{postId}(postId=*{postId})}" method="post">
-        <!--<input type="hidden" th:field="*{date}" th:value="*{date}">-->
+    <form th:action="@{/admin/post/edit/{postId}(postId=*{postId})}" method="post">
+        <input type="hidden" th:field="*{date}" th:value="*{date}">
         <div>
             <div class="form-floating">
                 <input type="text" id="title" th:field="*{title}"
@@ -49,7 +49,7 @@
         <br/>
         <button class="w-50 btn btn-primary btn-lg" type="submit">등록하기</button>
         <br/><br/>
-        <button type="button" class="w-50 btn btn-warning btn-lg" onclick="location.href='/admin/manager'">뒤로가기</button>
+        <button type="button" class="w-50 btn btn-warning btn-lg" onclick="location.href='/admin/post/list'">뒤로가기</button>
     </form>
     <br/>
 
