--- a/src/main/resources/templates/admin/post/savePostForm.html
+++ b/src/main/resources/templates/admin/post/savePostForm.html
@@ -48,7 +48,7 @@
         <br/>
         <button class="w-50 btn btn-primary btn-lg" type="submit">등록하기</button>
         <br/><br/>
-        <button type="button" class="w-50 btn btn-warning btn-lg" onclick="location.href='/admin/manager'">뒤로가기</button>
+        <button type="button" class="w-50 btn btn-warning btn-lg" onclick="location.href='/admin/post/list'">뒤로가기</button>
     </form>
     <br/>
 
