--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -7,6 +7,6 @@
 <body>
   Application is running...
   <br>
-  current version date: 230210 17:00
+  current application build dateTime: [[${time}]]
 </body>
 </html>
