--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -5,7 +5,7 @@
     <title>Healthy</title>
 </head>
 <body>
-  Application is running...
+  Application is running... ver.1.0
   <br>
   current application build dateTime: [[${time}]]
 </body>
