feat: 초기화 데이터 수정, 버튼 스타일 변경

--- a/src/main/resources/templates/admin/userManage/userDetail.html
+++ b/src/main/resources/templates/admin/userManage/userDetail.html
@@ -13,7 +13,7 @@
         <span>출석수 : [[*{attendanceNumber}]]</span><br/>
         <span>생일 : [[*{birth}]]</span><br/>
         <span>팀 : [[*{team}]]</span><br/>
-        <button onclick="resetPassword()">비밀번호 초기화</button>
+        <button onclick="resetPassword()" class="w-50 btn btn-danger btn-sm">비밀번호 초기화</button><br/>
         <br/>
     </div>
     <button class="w-50 btn btn-warning btn-sm" onclick="location.href='/admin/manager'">뒤로가기</button>
