--- a/src/main/resources/templates/admin/post/editPostForm.html
+++ b/src/main/resources/templates/admin/post/editPostForm.html
@@ -35,18 +35,18 @@
             <br/>
 
             <label for="q1">질문1</label>
-            <input type="hidden" th:field="*{questions[0].order}">
-            <textarea id="q1" th:field="*{questions[0].content}" class="form-control"
+            <input type="hidden" th:field="*{questionDtoList[0].order}">
+            <textarea id="q1" th:field="*{questionDtoList[0].content}" class="form-control"
                       placeholder="Q1"></textarea>
             <br/>
             <label for="q2">질문2</label>
-            <input type="hidden" th:field="*{questions[1].order}">
-            <textarea id="q2" th:field="*{questions[1].content}" class="form-control"
+            <input type="hidden" th:field="*{questionDtoList[1].order}">
+            <textarea id="q2" th:field="*{questionDtoList[1].content}" class="form-control"
                       placeholder="Q2"></textarea>
             <br/>
             <label for="q3">질문3</label>
-            <input type="hidden" th:field="*{questions[2].order}">
-            <textarea id="q3" th:field="*{questions[2].content}" class="form-control"
+            <input type="hidden" th:field="*{questionDtoList[2].order}">
+            <textarea id="q3" th:field="*{questionDtoList[2].content}" class="form-control"
                       placeholder="Q3"></textarea>
 
 
